# Dashboard

./: Background.qml  BootScreen.qml  CMakeLists.txt  Cameraview.qml  FOTAnotes.qml  FeatureToggle.qml  Footer.qml  Fota.qml  Header.qml  Laneline.qml  Main.qml  MoreWin.qml  Navigation.qml  Profile.qml  backend.cpp  backend.h  backgroundworker.cpp  backgroundworker.h  commconfig.h  commmanager.cpp  commmanager.h  conflict  containerworker.cpp  containerworker.h  main.cpp  manifestmanager.cpp  manifestmanager.h  networkmanager.cpp  networkmanager.h  zmqclient.cpp  zmqclient.h  zmqsubscriber.cpp  zmqsubscriber.h
fota-utils/: binary_list.json  containers_list.json  ecus_ips.json  fetched_containers_manifest.json  local_containers_manifest.json  localmanifest.json  move-tar.sh  templocalManifes.json  updated_containers_list.json
users/: users.json
